[build-system]
requires = ["pbr>=6.1.1"]
build-backend = "pbr.build"

[project]
name = "oslo.db"
description = "Oslo Database library"
authors = [
    {name = "OpenStack", email = "openstack-discuss@lists.openstack.org"},
]
readme = {file = "README.rst", content-type = "text/x-rst"}
license = {text = "Apache-2.0"}
dynamic = ["version", "dependencies"]
requires-python = ">=3.10"
classifiers = [
    "Environment :: OpenStack",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Homepage = "https://docs.openstack.org/oslo.db"
Repository = "https://opendev.org/openstack/oslo.db"

[project.optional-dependencies]
# So e.g. nova can test-depend on oslo.db[mysql]
mysql = [
    "PyMySQL>=0.7.6", # MIT License
]
# or oslo.db[postgresql]
postgresql = [
    "psycopg2-binary>=2.8.0", # LGPL/ZPL
]

[project.entry-points."oslo.config.opts"]
"oslo.db" = "oslo_db.options:list_opts"

[project.entry-points."oslo.db.migration"]
alembic = "oslo_db.sqlalchemy.migration_cli.ext_alembic:AlembicExtension"

[tool.setuptools]
packages = [
    "oslo_db"
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ['B105', 'B311']
