[metadata]
name = oslo.db
summary = Oslo Database library
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/oslo.db/latest
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[extras]
# So e.g. nova can test-depend on oslo.db[mysql]
mysql =
  PyMySQL>=0.7.6 # MIT License
# or oslo.db[postgresql]
postgresql =
  psycopg2>=2.6.2 # LGPL/ZPL
# Dependencies for testing oslo.db itself.
test =
  hacking!=0.13.0,<0.14,>=0.12.0 # Apache-2.0
  coverage!=4.4,>=4.0 # Apache-2.0
  doc8>=0.6.0 # Apache-2.0
  eventlet!=0.18.3,!=0.20.1,<0.21.0,>=0.18.2 # MIT
  fixtures>=3.0.0 # Apache-2.0/BSD
  mock>=2.0.0 # BSD
  python-subunit>=1.0.0 # Apache-2.0/BSD
  sphinx>=1.6.2 # BSD
  openstackdocstheme>=1.17.0 # Apache-2.0
  oslotest>=1.10.0 # Apache-2.0
  oslo.context>=2.19.2 # Apache-2.0
  testrepository>=0.0.18 # Apache-2.0/BSD
  testtools>=2.2.0 # MIT
  os-testr>=1.0.0 # Apache-2.0
  reno>=2.5.0 # Apache-2.0
fixtures =
  testresources>=2.0.0 # Apache-2.0/BSD
  testscenarios>=0.4 # Apache-2.0/BSD
pifpaf =
  pifpaf>=0.10.0 # Apache-2.0

[files]
packages =
    oslo_db

[entry_points]
oslo.config.opts =
    oslo.db = oslo_db.options:list_opts
    oslo.db.concurrency = oslo_db.concurrency:list_opts

oslo.db.migration =
    alembic = oslo_db.sqlalchemy.migration_cli.ext_alembic:AlembicExtension
    migrate = oslo_db.sqlalchemy.migration_cli.ext_migrate:MigrateExtension

[wheel]
universal = 1

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = oslo_db/locale
domain = oslo_db

[update_catalog]
domain = oslo_db
output_dir = oslo_db/locale
input_file = oslo_db/locale/oslo_db.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = oslo_db/locale/oslo_db.pot

[pbr]
autodoc_index_modules = True
api_doc_dir = reference/api
autodoc_exclude_modules =
   oslo_db.tests.*
