[metadata]
name = oslo.db
summary = Oslo Database library
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/oslo.db/latest
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[extras]
# So e.g. nova can test-depend on oslo.db[mysql]
mysql =
    PyMySQL>=0.7.6 # MIT License
# or oslo.db[postgresql]
postgresql =
    psycopg2>=2.7.0 # LGPL/ZPL

[files]
packages =
    oslo_db

[entry_points]
oslo.config.opts =
    oslo.db = oslo_db.options:list_opts
    oslo.db.concurrency = oslo_db.concurrency:list_opts

oslo.db.migration =
    alembic = oslo_db.sqlalchemy.migration_cli.ext_alembic:AlembicExtension
    migrate = oslo_db.sqlalchemy.migration_cli.ext_migrate:MigrateExtension

[compile_catalog]
directory = oslo_db/locale
domain = oslo_db

[update_catalog]
domain = oslo_db
output_dir = oslo_db/locale
input_file = oslo_db/locale/oslo_db.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = oslo_db/locale/oslo_db.pot
