[metadata]
name = oslo.db
summary = Oslo Database library
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/oslo.db/latest
python_requires = >=3.8
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[extras]
# So e.g. nova can test-depend on oslo.db[mysql]
mysql =
    PyMySQL>=0.7.6 # MIT License
# or oslo.db[postgresql]
postgresql =
    psycopg2>=2.8.0 # LGPL/ZPL

[files]
packages =
    oslo_db

[entry_points]
oslo.config.opts =
    oslo.db = oslo_db.options:list_opts
    oslo.db.concurrency = oslo_db.concurrency:list_opts

oslo.db.migration =
    alembic = oslo_db.sqlalchemy.migration_cli.ext_alembic:AlembicExtension
